--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -60,7 +60,8 @@
         <activity android:name=".Activities.Metas" />
         <activity android:name=".Activities.NuevaMeta" />
         <activity android:name=".Activities.Actividades" />
-        <activity android:name=".Activities.Compartir"></activity>
+        <activity android:name=".Activities.Compartir" />
+        <activity android:name=".Activities.NuevoDeporteFavorito"></activity>
     </application>
 
 </manifest>
