--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,10 +22,8 @@ android {
 
 
 dependencies {
-
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
-
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.android.support:support-v4:23.1.1'
     compile 'com.facebook.android:facebook-android-sdk:4.7.0'
@@ -35,5 +33,5 @@ dependencies {
     compile 'com.android.support:cardview-v7:23.1.1'
     compile 'com.mcxiaoke.volley:library:1.+'
     compile 'com.squareup.picasso:picasso:2.4.+'
-
+    compile files('libs/universal-image-loader-1.9.5.jar')
 }
