Queda funcionando el método de sincronización para una meta, se sincroniza el progreso del miembro al arranque de la aplicación, falta la sincronización de los progresos

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,6 +47,20 @@
             </intent-filter>
         </service>
         <service
+            android:name="com.mx.antorcha.Servicios.ServicioDescarga"
+            android:label="ServicioDescarga">
+            <intent-filter>
+                <action android:name = "com.myapp.id.action.ACTION_OPEN_SERVICE"/>
+            </intent-filter>
+        </service>
+        <service
+            android:name="com.mx.antorcha.Servicios.ServicioSincronizacion"
+            android:label="ServicioSincronizacion">
+            <intent-filter>
+                <action android:name = "com.myapp.id.action.ACTION_OPEN_SERVICE"/>
+            </intent-filter>
+        </service>
+        <service
             android:name=".GCM.ServicioRegistro"
             android:exported="false" />
 
