Se arreglan varios bugs, ya descarga mejor las imagenes, se refresca el evento, se corrigen algunas cosas de las notificaciones, se agrega la notificación separada y se agrega la bienvenida y los letreros de ayuda

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -110,7 +110,8 @@
         <activity android:name=".Activities.AyudanosMejorar" />
         <activity android:name=".Bienvenida.Bienvenida" />
         <activity android:name=".Bienvenida.SeleccionaDeportes" />
-        <activity android:name=".Bienvenida.BienvenidaNotificaciones"></activity>
+        <activity android:name=".Bienvenida.BienvenidaNotificaciones" />
+        <activity android:name=".Activities.NuevaNotificacion"></activity>
     </application>
 
 </manifest>
