--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -111,7 +111,8 @@
         <activity android:name=".Bienvenida.Bienvenida" />
         <activity android:name=".Bienvenida.SeleccionaDeportes" />
         <activity android:name=".Bienvenida.BienvenidaNotificaciones" />
-        <activity android:name=".Activities.NuevaNotificacion"></activity>
+        <activity android:name=".Activities.NuevaNotificacion" />
+        <activity android:name=".Activities.DetalleEvento"></activity>
     </application>
 
 </manifest>
